--- a/k_level_pretrain/test.ipynb
+++ b/k_level_pretrain/test.ipynb
@@ -368,6 +368,591 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from pretrain import *\n",
+    "\n",
+    "def get_everything(data_path):\n",
+    "    # Training Labels\n",
+    "    ## Load entity type labels\n",
+    "    print('Loading entity type labels...')\n",
+    "    ent_type = torch.tensor(np.load(f'{data_path}/ent_type_onehot.npy')) # (num_ent, num_ent_type)\n",
+    "\n",
+    "    ## Load center molecule motifs\n",
+    "    print('Loading center molecule motifs...')\n",
+    "    motifs = []\n",
+    "    with open(f'{data_path}/id2motifs.json', 'r') as f:\n",
+    "        id2motifs = json.load(f)\n",
+    "    motif_len = len(id2motifs['0'])\n",
+    "    for i in range(len(ent_type)):\n",
+    "        if str(i) in id2motifs.keys():\n",
+    "            motifs.append(np.array(id2motifs[str(i)]))\n",
+    "        else:\n",
+    "            motifs.append(np.array([0] * motif_len))\n",
+    "\n",
+    "    motifs = torch.tensor(np.array(motifs), dtype=torch.long) # (num_ent, motif_len)\n",
+    "\n",
+    "    ## Center molecule ids\n",
+    "    center_molecule_ids = torch.tensor([int(key) for key in id2motifs.keys()])\n",
+    "\n",
+    "    # Entire Knowledge Graph (MolKG)\n",
+    "    print('Loading entire knowledge graph...')\n",
+    "    G = nx.read_gpickle(f'{data_path}/graph.gpickle')\n",
+    "    G_tg = from_networkx(G)\n",
+    "\n",
+    "    # molecule_mask\n",
+    "    print('Loading molecule mask...')\n",
+    "    molecule_mask = torch.tensor(ent_type[:,0][G_tg.edge_index[0]] == 1) # (num_edges,)\n",
+    "\n",
+    "    return ent_type, motifs, G_tg, center_molecule_ids, molecule_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading entity type labels...\n",
+      "Loading center molecule motifs...\n",
+      "Loading entire knowledge graph...\n",
+      "Loading molecule mask...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_107140/1126395188.py:34: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  molecule_mask = torch.tensor(ent_type[:,0][G_tg.edge_index[0]] == 1) # (num_edges,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ent_type, motifs, G_tg, center_molecule_ids, molecule_mask = get_everything(\"../data_process/pretrain_data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_107140/2937019473.py:1: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  molecule_mask = torch.tensor(ent_type[:,0] == 1) # (num_edges,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "molecule_mask = torch.tensor(ent_type[:,0] == 1) # (num_edges,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([88811])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.where(molecule_mask)[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.utils import k_hop_subgraph\n",
+    "\n",
+    "nodes, _, _, edge_mask = k_hop_subgraph(int(center_molecule_ids[0]), 1, G_tg.edge_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double_mask = molecule_mask * edge_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1192001"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(torch.where(edge_mask)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = '/data/pj20/molkg/pretrain_data'\n",
+    "with open(f'{data_path}/graph.pt', 'rb') as f:\n",
+    "    G_tg = torch.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(70403)"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_tg.edge_index[1][1332817]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "molecule_head_mask = ent_type[:,0][G_tg.edge_index[0]] == 1 # (num_edges,)\n",
+    "non_molecule_head_mask = ent_type[:,0][G_tg.edge_index[0]] == 0 # (num_edges,)\n",
+    "molecule_tail_mask = ent_type[:,0][G_tg.edge_index[1]] == 1 # (num_edges,)\n",
+    "non_molecule_tail_mask = ent_type[:,0][G_tg.edge_index[1]] == 0 # (num_edges,)\n",
+    "\n",
+    "mol2mol_mask = molecule_head_mask * molecule_tail_mask\n",
+    "mol2nonmol_mask = molecule_head_mask * non_molecule_tail_mask\n",
+    "nonmol2mol_mask = non_molecule_head_mask * molecule_tail_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([False, False, False,  ..., False, False, False])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "916534"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(torch.where(mol2nonmol_mask)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([184819, 16])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ent_type.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(True)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "molecule_mask[center_molecule_ids[10000]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(43924)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "center_molecule_ids[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.utils import k_hop_subgraph\n",
+    "\n",
+    "nodes, _, _, edge_mask = k_hop_subgraph(int(center_molecule_ids[1]), 0, G_tg.edge_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.utils import to_undirected, k_hop_subgraph\n",
+    "\n",
+    "def get_k_hop_nodes(node_index, num_hops, edge_index):\n",
+    "    # Convert the edge_index to undirected\n",
+    "    edge_index = to_undirected(edge_index)\n",
+    "\n",
+    "    # Compute the k-hop subgraph\n",
+    "    node_idx_k_hop, _, _, _ = k_hop_subgraph(node_index, num_hops, edge_index, relabel_nodes=False, num_nodes=None, flow='source_to_target')\n",
+    "\n",
+    "    return node_idx_k_hop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_ids = get_k_hop_nodes(int(center_molecule_ids[8]), 1, G_tg.edge_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 3, 4, 1, 4, 4, 0, 1, 4],\n",
+       "        [2, 2, 2, 3, 3, 1, 1, 3, 2]])"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_tg.subgraph(torch.tensor([4, 5, 6, 7, 8])).edge_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 2,  4,  5,  4,  4,  3,  4,  5,  3,  4,  4,  4,  4,  4,  4,  4,  4,  4,\n",
+       "          4,  0,  2,  5,  4,  4,  4,  4,  4,  4,  4],\n",
+       "        [ 1, 12, 10, 11, 10, 10, 12,  0,  2,  2,  0,  1,  5,  3, 13, 17, 16, 14,\n",
+       "         15,  7,  6,  7,  7,  6, 18,  9,  8, 19, 20]])"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pj20/miniconda3/envs/kgc/lib/python3.8/site-packages/torch_geometric/data/storage.py:303: UserWarning: Unable to accurately infer 'num_nodes' from the attribute set '{'relation', 'edge_index', 'rel_label'}'. Please explicitly set 'num_nodes' as an attribute of 'data' to suppress this warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([], size=(2, 0), dtype=torch.int64)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_tg.subgraph(torch.tensor([43924])).edge_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(torch.where(edge_mask)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double_mask_mol2mol = mol2mol_mask * edge_mask\n",
+    "double_mask_mol2nonmol = mol2nonmol_mask * edge_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 537424,  537430,  537431,  ..., 2100066, 2118004, 2119986])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.where(double_mask_mol2mol)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1251)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "center_molecule_ids[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ent_type[85600]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([4666855]), torch.Size([4666855]), torch.Size([4666855]))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edge_mask.shape, molecule_mask.shape, double_mask.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_idx = torch.where(double_mask == True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([    10,     11,     12,  ..., 112293, 125440, 177470])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(edge_index=[2, 1192001], relation=[1192001], rel_label=[1192001, 39], num_nodes=1637)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_tg.subgraph(nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{True}'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
